Asset storage blog improments (#58)
* Fix turnstile issue on contacts form

* Add resend verification email actions and views for user and developer/admin

* Fix DAST related vulnerabilities and warnings

* Update public pages with gleania design

* Update sitemap with all urls

* Remove svg logo from the layouts

* Add DAST scan vulnerabilities headers for caching

* Remove turnstile from layouts and add it where necessary

* Add google fonts url to csp

* Add other google url for fonts

* Fix dark mode labels and resume show page layout

* Add google fonts css url to csp

* Fix blog cover image and developer portal issues

* Parameterize the tag urls

* Enable custom cdn public access

* Add cloudflare public domain for blog assets

* Fix public url error

* Fix developer portal actions handling without controller actions and routes

* Improve email sync processing and classification

* Improve email display

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -54,6 +54,8 @@ env:
     - CLOUDFLARE_ACCESS_KEY_SECRET
     - CLOUDFLARE_BUCKET
     - CLOUDFLARE_API_TOKEN
+    - CLOUDFLARE_PUBLIC_URL
+    - CLOUDFLARE_ASSETS_URL
     - LEMONSQUEEZY_API_KEY
     - LEMONSQUEEZY_STORE_ID
     - LEMONSQUEEZY_WEBHOOK_SECRET
